--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,3 @@
-p {
-    background-color : aqua;
-    text-align : center;
-}
-
 #helloText {
     text-align : center;
 
@@ -10,4 +5,20 @@ p {
 
 #buttonON {
     text-align : center;
+}
+
+#buttonON:hover {
+    opacity: 0,5;
+}
+
+#login-container {
+    background-color: aquamarine;
+    text-align: center;
+    display-model: block;
+
+}
+
+#login-inputs {
+    background-color: #a985c2;
+    display : inline-grid;
 }
