fixing issues, enelver yarn, mis nodemon // sur branch main preparation fustion suppression master et créations features

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 #login-container {
     background-color: aquamarine;
     text-align: center;
-    display-model: block;
+    display: block;
 
 }
 
